--- a/style/main.css
+++ b/style/main.css
@@ -13,7 +13,7 @@
 /* elementos base */
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
@@ -91,11 +91,15 @@ header nav a:hover{
 }
 
 .filme-principal .container{
-    width: 70%;
+    width: 60%;
 }
 
 .box-filme{
     height: 100%;
     width: 100%;
     display: block;
+}
+
+.carrossel-filmes{
+    margin-top: 30px;
 }
